Fix 'add code comment' button being invisible all the time (#13389)
* Fix 'add code comment' button being invisible all the time

* Fix off-center icon

* Remove old JS hover hack

* Show on full-line hover

--- a/web_src/less/_review.less
+++ b/web_src/less/_review.less
@@ -1,7 +1,7 @@
 .ui.button.add-code-comment {
   font-size: 14px;
   height: 16px;
-  line-height: 16px !important;
+  line-height: 12px !important;
   padding: 0;
   position: relative;
   width: 16px;
@@ -15,6 +15,10 @@
   &:hover {
     transform: scale(1.2, 1.2);
   }
+}
+
+.diff-file-box .lines-code:hover .ui.button.add-code-comment {
+  opacity: 1;
 }
 
 .repository .diff-file-box .code-diff .add-comment-left,
@@ -38,11 +42,6 @@
     display: block;
     margin-left: auto;
   }
-}
-
-.focus-lines-new .ui.button.add-code-comment.add-code-comment-right,
-.focus-lines-old .ui.button.add-code-comment.add-code-comment-left {
-  opacity: 1;
 }
 
 .comment-code-cloud {
